# haskell-circuit-boards

./: .gitignore  ChangeLog.md  LICENSE  README.md  RUN.sh  haskell-circuit-boards.cabal  package.yaml
app/: DiodeMatrix.hs  Main.hs
examples/: OUT-ex-01.gbr  OUT-ex-02.gbr  reference-ex-01.gbr  reference-ex-02.gbr  region-experiment.gbr
src/Language/Gerber/: Antiparse.hs  Data.hs  Stackup.hs  State.hs  Syntax.hs  Writer.hs
src/Language/Gerber/Antiparse/: Class.hs
test/: Spec.hs
